se acomodaron iteraciones

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -119,6 +119,7 @@ h3 {
         font-size: 15px;
         margin-bottom: 5px;
         color: #F6F6F6;
+        display: flex;
     }
 
     .titulo {
