--- a/css/estilo.css
+++ b/css/estilo.css
@@ -38,20 +38,14 @@ footer {
 h1 {
     color: #F6F6F6;
     font-family: "Tilt Prism";
-    font-size: 75px;
+    font-size: 4em;
     text-align: center;
-    align-items: center;
-    width: 100%;
-    height: 100px;
-    flex-wrap: wrap;
-    margin-left: 20px;
-    margin-top: 80px;
 }
 
 h2 {
     color: #ebebe6;
     font-family: "Work Sans";
-    font-size: 60px;
+    font-size: 3em;
     text-align: center;
     padding: 20px;
 }
@@ -59,16 +53,16 @@ h2 {
 h3 {
     color: #d3d3c3;
     font-family: "Work Sans";
-    font-size: 22px;
+    font-size: 1.375em; 
     text-align: center;
     padding: 3em 0;
-    letter-spacing: 15px;
+    letter-spacing: 0.9375em; 
 }
 
 @media (min-width: 768px) and (max-width: 1375px) {
-    .titulo h1 {
-        font-size: 40px;
-        color: #ebebe6;
+    .titulo h1{
+        font-size: 3em;
+        color: #F6F6F6;
     }
 
     .logo .logo-imagen {
@@ -77,7 +71,7 @@ h3 {
     }
 
     .menu-header {
-        display: flexbox;
+        display: flex;
     }
 }
 
@@ -245,7 +239,7 @@ h3 {
     }
 
     .titulo h1 {
-        height: 30px;
+        font-size: 1em;
     }
 
     .area-menu-header .menu-header li a {
@@ -455,14 +449,13 @@ h3 {
 .titulo h1 {
     color: #F6F6F6;
     font-family: "Tilt Prism";
-    font-size: 75px;
+    font-size: 5em;
     text-align: center;
     align-items: center;
     width: 100%;
-    height: 100px;
-    flex-wrap: wrap;
-    margin-left: 20px;
-    margin-top: 80px;
+    flex-wrap: nowrap;
+   
+    
 }
 
 .fondo h3 {
