--- a/css/estilo.css
+++ b/css/estilo.css
@@ -240,17 +240,17 @@ h4 {
             "titulo"
             "searchbar"
             "area-menu-header";
+        max-height: 180px;
     }
 
-    .fondo h3 {
-        font-size: 12px;
+    .main-contenido-principal .fondo h3 {
+        font-size: 15px;
     }
 
     .area-menu-header .menu-header li a {
-        font-size: 12px;
+        font-size: 10px;
         gap: 0;
         margin: 0;
-        padding: 1px;
     }
 
     .area-menu-header .menu-header li {
@@ -258,28 +258,80 @@ h4 {
     }
 
     .logo .logo-imagen {
+        display: none;
         width: 100%;
         height: 90px;
         margin-top: 5px;
     }
 
+    .contenedor-menu-footer-grande {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 30px;
+    }
+
+    .redes-sociales,
+    .mapa-copyr,
+    .log-inicio-foot {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 10em;
+    }
+
+    .menu-footer {
+        height: 7em;
+    }
+
+    .menu-footer li {
+        font-size: 7px;
+        text-align: left;
+    }
+
     .menu-footer li a {
         font-size: 10px;
-        width: 20px;
+        width: 10px;
+    }
+
+    .mapa-container {
+        text-align: center;
+        margin-top: 10px;
     }
 
     .mapa-container .mapa {
-        height: 70px;
+        height: 80px;
     }
 
     .inicio-sesion-footer form {
-        width: 60px;
+        width: 100%;
+        text-align: center;
         font-size: 8px;
+        justify-content: center;
+        margin-left: 30px;
+    }
+
+    .input-group label {
+        text-align: center;
+    }
+
+    .input-group input[type="text"],
+    .input-group input[type="password"] {
+        width: 100%;
+        box-sizing: border-box;
+        max-width: 80%;
+        margin: 0;
+        padding: 6px 10px;
+        transition: transform 0.3s ease;
+        border: 1px solid #ccc;
+        outline: none;
     }
 
     .buttons-session-footer {
-        width: 70px;
-        font-size: 9px;
+        display: flex;
+        justify-content: center;
+        margin-top: 10px;
     }
 
     .inicio-sesion-footer .input-group label {
@@ -287,22 +339,42 @@ h4 {
     }
 
     .buttons-session-footer input[type="button"] {
-        width: 30px;
-        font-size: 7px;
-        gap: 4px;
-        padding: 0 0;
+        width: auto;
+        font-size: 8px;
+        gap: 2px;
+        padding: 0 0px;
+        margin-left: 10px;
     }
 
-    .contenedor-menu-footer {
-        gap: 3px;
-    }
-
-    .header .titulo h1{
+    .header .titulo h1 {
         font-size: 30px;
+        padding-left: 15px;
     }
-    
-    .responsive-title {
-        font-size: 6vw;
+
+    .carousel-inner {
+        display: flex;
+        justify-content: center;
+    }
+
+    .carousel-item {
+        text-align: center;
+    }
+
+    .carousel-item img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .titulo-4 {
+        flex-direction: column;
+    }
+
+    .titulo-4 .texto-container h4 {
+        font-size: 1em;
+    }
+
+    .titulo-4 .texto-container p {
+        font-size: 10px;
     }
 }
 
@@ -484,7 +556,7 @@ h4 {
 
 .titulo-4 {
     display: flex;
-    max-width: 80vw; 
+    max-width: 80vw;
     margin: 0 auto;
     align-items: center;
     padding-bottom: 2em;
@@ -492,23 +564,23 @@ h4 {
 
 .texto-container {
     flex: 1;
-    text-align: center; 
+    text-align: center;
 }
 
 .titulo-4 h4 {
     color: #F6F6F6;
     font-family: "Merryweather";
     font-size: 30px;
-    text-align: left; 
-    padding: 3em 20px 0 0; 
+    text-align: left;
+    padding: 3em 20px 0 0;
     text-transform: uppercase;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
 }
 
 .titulo-4 p {
     color: #ebebe6;
-    padding: 20px 0 20px 0; 
-    text-align: left; 
+    padding: 20px 0 20px 0;
+    text-align: left;
     font-size: 20px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
 }
@@ -516,13 +588,13 @@ h4 {
 .imagen-ladera-titulo-4 img {
     width: 40vw;
     height: auto;
-    margin-left: 20px; 
+    margin-left: 20px;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
     border-radius: 15px;
     transition: transform 0.4 ease;
 }
 
-.imagen-ladera-titulo-4:hover img{
+.imagen-ladera-titulo-4:hover img {
     transform: scale(0.9);
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
 }
@@ -833,6 +905,7 @@ h4 {
     background-color: #1C1C1C;
     padding: 0;
     margin-top: 0;
+    margin-bottom: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -842,7 +915,6 @@ h4 {
     display: flex;
     align-items: center;
     gap: 30px;
-
 }
 
 .menu-footer * {
@@ -855,6 +927,25 @@ h4 {
     margin-left: 25px;
 }
 
+.contenedor-menu-footer-grande {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.redes-sociales {
+    grid-area: redes-sociales;
+}
+
+.mapa-copyr {
+    grid-area: mapa-copyr;
+}
+
+.log-inicio-foot {
+    grid-area: log-inicio-foot;
+}
+
 .menu-footer ul li {
     padding: 20px;
     margin: 0;
@@ -863,7 +954,7 @@ h4 {
 
 .menu-footer ul li a {
     display: block;
-    margin-bottom: 5px;
+    margin-bottom: 0;
     list-style-type: none;
 }
 
@@ -882,9 +973,9 @@ h4 {
 }
 
 .mapa-container {
-    width: 20%;
-    margin-bottom: 40px;
-    margin-top: 20px;
+    width: 100%;
+    margin-bottom: 10px;
+    margin-top: 10px;
     transition: transform 1 ease;
 }
 
@@ -892,7 +983,7 @@ h4 {
     width: 100%;
     height: 100%;
     border: 0;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
 
 .mapa:hover {
@@ -914,7 +1005,7 @@ h4 {
 }
 
 .inicio-sesion-footer {
-    margin-right: 60px;
+    margin-right: 50px;
 }
 
 .inicio-sesion-footer form {
@@ -925,7 +1016,8 @@ h4 {
 .input-group {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 8px;
+    border-radius: 20px;
 }
 
 .input-group label {
@@ -940,7 +1032,6 @@ h4 {
 
 .input-group input[type="text"],
 .input-group input[type="password"] {
-    border-radius: 15px;
     padding: 2px 10px;
     transition: transform 0.3 ease;
 }
