--- a/css/estilo.css
+++ b/css/estilo.css
@@ -20,7 +20,7 @@
 
 header {
     width: 100%;
-    height: 30vh;
+    height: 28vh;
 }
 
 body {
@@ -29,7 +29,7 @@ body {
 }
 
 footer {
-    height: 25vh;
+    height: 27vh;
     width: 100%;
 }
 
@@ -67,7 +67,7 @@ h4 {
 
 @media (min-width: 768px) and (max-width: 1375px) {
     .titulo h1 {
-        font-size: 3em;
+        font-size: 4em;
         color: #F6F6F6;
     }
 
@@ -220,18 +220,23 @@ h4 {
 
 @media (max-width: 391px) {
     header {
-        height: 20vh;
+        height: 20%;
         width: 100%;
     }
 
     body {
-        height: 55vh;
+        height: 45%;
         width: 100%;
     }
 
     footer {
-        height: 25vh;
+        height: 35%;
         width: 100%;
+    }
+
+    .header{
+        margin-bottom: 0;
+        margin-top: 0;
     }
 
     .container-header {
@@ -240,7 +245,7 @@ h4 {
             "titulo"
             "searchbar"
             "area-menu-header";
-        max-height: 180px;
+        max-height: 400px;
     }
 
     .main-contenido-principal .fondo h3 {
@@ -248,13 +253,15 @@ h4 {
     }
 
     .area-menu-header .menu-header li a {
-        font-size: 10px;
+        font-size: 8px;
         gap: 0;
-        margin: 0;
+        margin-top: 0;
     }
 
     .area-menu-header .menu-header li {
-        padding: 10px;
+        padding: 0;
+        margin: 0;
+        background-color: #1C1C1C;
     }
 
     .logo .logo-imagen {
@@ -268,7 +275,19 @@ h4 {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        gap: 30px;
+        gap: 20px;
+    }
+
+    .footer-bottom-text {
+        text-align: center;
+        margin-top: 0;
+        margin: 0;
+        color: #F6F6F6;
+        font-family: "Merryweather";
+        text-decoration: none;
+        list-style-type: none;
+        padding: 1px;
+        font-size: 8px;
     }
 
     .redes-sociales,
@@ -278,11 +297,14 @@ h4 {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        height: 10em;
+        height: 9em;
     }
 
     .menu-footer {
-        height: 7em;
+        height: 16em;
+        display: table-column;
+        padding-right: 10px;
+        margin-right: 20px;
     }
 
     .menu-footer li {
@@ -293,15 +315,19 @@ h4 {
     .menu-footer li a {
         font-size: 10px;
         width: 10px;
+        background-color: #1C1C1C;
     }
 
+    .mapa-copyr{
+        margin-top: -5px;
+    }
+    
     .mapa-container {
         text-align: center;
-        margin-top: 10px;
     }
 
     .mapa-container .mapa {
-        height: 80px;
+        height: 70px;
     }
 
     .inicio-sesion-footer form {
@@ -310,8 +336,14 @@ h4 {
         font-size: 8px;
         justify-content: center;
         margin-left: 30px;
+        align-content: center;
     }
 
+    .input-group{
+        gap: -2px;
+        align-content: center;
+    }
+    
     .input-group label {
         text-align: center;
     }
@@ -322,7 +354,7 @@ h4 {
         box-sizing: border-box;
         max-width: 80%;
         margin: 0;
-        padding: 6px 10px;
+        padding: 6px 5px;
         transition: transform 0.3s ease;
         border: 1px solid #ccc;
         outline: none;
@@ -330,24 +362,30 @@ h4 {
 
     .buttons-session-footer {
         display: flex;
+        margin-top: 0;
+        margin-left: 20px;
+        gap: 3px;
+        align-content: center;
+        align-items: center;
+        justify-items: center;
+    }
+
+    .buttons-session-footer input[type="button"] {
+        font-size: 8px;
+        height: auto;
+        padding: 4px 10px;
+        text-align: center; 
+        display: flex; 
+        align-items: center;
         justify-content: center;
-        margin-top: 10px;
     }
 
     .inicio-sesion-footer .input-group label {
         font-size: 8px;
     }
 
-    .buttons-session-footer input[type="button"] {
-        width: auto;
-        font-size: 8px;
-        gap: 2px;
-        padding: 0 0px;
-        margin-left: 10px;
-    }
-
     .header .titulo h1 {
-        font-size: 30px;
+        font-size: 25px;
         padding-left: 15px;
     }
 
