--- a/css/estilo.css
+++ b/css/estilo.css
@@ -182,10 +182,10 @@ h4 {
         height: 90px;
         margin-top: 20px;
     }
-
+    
     .menu-footer li a {
         font-size: 10px;
-        width: 20px;
+        width: 15px;
     }
 
     .mapa-container .mapa {
@@ -214,7 +214,7 @@ h4 {
     }
 
     .contenedor-menu-footer {
-        gap: 3px;
+        gap: 2px;
     }
 }
 
@@ -278,6 +278,10 @@ h4 {
         gap: 20px;
     }
 
+    .contenedor-derechos .footer-bottom-text{
+        font-size: 3px;
+    } 
+    
     .footer-bottom-text {
         text-align: center;
         margin-top: 0;
@@ -287,7 +291,6 @@ h4 {
         text-decoration: none;
         list-style-type: none;
         padding: 1px;
-        font-size: 8px;
     }
 
     .redes-sociales,
@@ -300,6 +303,10 @@ h4 {
         height: 9em;
     }
 
+    .menu-item .fab {
+        font-size: 12px; 
+    }
+    
     .menu-footer {
         height: 16em;
         display: table-column;
@@ -315,7 +322,7 @@ h4 {
     .menu-footer li a {
         font-size: 10px;
         width: 10px;
-        background-color: #1C1C1C;
+        padding: 0;
     }
 
     .mapa-copyr{
@@ -327,7 +334,8 @@ h4 {
     }
 
     .mapa-container .mapa {
-        height: 70px;
+        height: 50px;
+        padding-bottom: 10px;
     }
 
     .inicio-sesion-footer form {
@@ -391,7 +399,7 @@ h4 {
 
     .carousel-inner {
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
     }
 
     .carousel-item {
@@ -414,6 +422,8 @@ h4 {
     .titulo-4 .texto-container p {
         font-size: 10px;
     }
+
+
 }
 
 /* Header REFORMADO */
@@ -587,10 +597,18 @@ h4 {
     letter-spacing: 15px;
 }
 
-.carousel-item img {
-    height: auto;
-    width: 30%;
+.carousel-inner .carousel-item {
+    max-width: 80%;
+    height: 80%;
+    align-content: center;
+    align-items: center;
+    justify-content: center;
 }
+
+.carousel-inner{
+    margin: auto;
+}
+
 
 .titulo-4 {
     display: flex;
