--- a/css/estilo.css
+++ b/css/estilo.css
@@ -65,461 +65,6 @@ h4 {
     font-size: 20px;
 }
 
-@media (min-width: 768px) and (max-width: 1375px) {
-    .titulo h1 {
-        font-size: 4em;
-        color: #F6F6F6;
-    }
-
-    .logo .logo-imagen {
-        width: 100%;
-        height: 150px;
-    }
-
-    .menu-header {
-        display: flex;
-    }
-}
-
-@media (max-width: 768px) {
-    header {
-        height: 30%;
-        width: 100%;
-    }
-
-    body {
-        height: 55%;
-        width: 100%;
-    }
-
-    footer {
-        height: 15%;
-        width: 100%;
-    }
-
-    .container-header {
-        grid-template-areas:
-            "logo"
-            "titulo"
-            "searchbar"
-            "area-menu-header";
-    }
-
-    .fondo h3 {
-        font-size: 10px;
-        letter-spacing: 5px;
-        color: #d3d3c3;
-    }
-
-    .responsive-title {
-        font-size: 15px;
-    }
-
-    /*.titulo {
-        max-height: 100px;
-        justify-content: center;
-    }*/
-
-    .logo {
-        max-height: 100px;
-    }
-
-    .logo .logo-imagen {
-        width: 100%;
-        height: 90px;
-    }
-
-    .logo {
-        margin-bottom: 0px;
-        padding: 0;
-    }
-
-    .container-header .searchbar {
-        display: none;
-        width: 100px;
-        height: 100%;
-    }
-
-    .menu-header {
-        display: inline-flex;
-        flex-wrap: wrap;
-        gap: 0;
-        font-size: 5px;
-        padding: 0;
-        margin: 0;
-    }
-
-    .menu-header li a {
-        gap: 0;
-        font-size: 4px;
-    }
-
-    .menu-footer li a {
-        font-size: 15px;
-        width: 40px;
-    }
-
-    .mapa-container p {
-        font-size: 7px;
-    }
-
-    .mapa-container .mapa {
-        height: 100px;
-    }
-
-    .inicio-sesion-footer form {
-        width: 100px;
-        font-size: 15px;
-    }
-
-    .inicio-sesion-footer form {
-        width: 100px;
-        font-size: 9px;
-    }
-
-    .logo .logo-imagen {
-        width: 100%;
-        height: 90px;
-        margin-top: 20px;
-    }
-
-    .menu-footer li a {
-        font-size: 10px;
-        width: 15px;
-    }
-
-    .mapa-container .mapa {
-        height: 70px;
-    }
-
-    .inicio-sesion-footer form {
-        width: 60px;
-        font-size: 8px;
-    }
-
-    .buttons-session-footer {
-        width: 70px;
-        font-size: 9px;
-    }
-
-    .inicio-sesion-footer .input-group label {
-        font-size: 8px;
-    }
-
-    .buttons-session-footer input[type="button"] {
-        width: 30px;
-        font-size: 7px;
-        gap: 4px;
-        padding: 0 0;
-    }
-
-    .contenedor-menu-footer {
-        gap: 2px;
-    }
-}
-
-@media (max-width: 391px) {
-    header {
-        height: 20%;
-        width: 100%;
-    }
-
-    body {
-        height: 45%;
-        width: 100%;
-        overflow-x: hidden;
-    }
-
-    footer {
-        height: 35%;
-        width: 100%;
-    }
-
-    .header {
-        margin-bottom: 0;
-        margin-top: 0;
-    }
-
-    .container-header {
-        grid-template-areas:
-            "logo"
-            "titulo"
-            "searchbar"
-            "area-menu-header";
-    }
-
-    .main-contenido-principal .fondo h3 {
-        font-size: 15px;
-    }
-
-    .area-menu-header .menu-header li a {
-        font-size: 8px;
-        gap: 0;
-        margin-top: 0;
-    }
-
-    .area-menu-header .menu-header li {
-        padding: 0;
-        margin: 0;
-        background-color: #1C1C1C;
-    }
-
-    .logo .logo-imagen {
-        display: none;
-        width: 100%;
-        height: 90px;
-        margin-top: 5px;
-    }
-
-    .contenedor-menu-footer-grande {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        gap: 20px;
-    }
-
-    .contenedor-derechos .footer-bottom-text {
-        font-size: 3px;
-    }
-
-    .footer-bottom-text {
-        text-align: center;
-        margin-top: 0;
-        margin: 0;
-        color: #F6F6F6;
-        font-family: "Merryweather";
-        text-decoration: none;
-        list-style-type: none;
-        padding: 1px;
-    }
-
-    .redes-sociales,
-    .mapa-copyr,
-    .log-inicio-foot {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 10em;
-        width: auto;
-    }
-
-    .menu-item .fab {
-        font-size: 12px;
-    }
-
-    .menu-footer {
-        height: 16em;
-        display: table-column;
-        padding-right: 10px;
-        margin-right: 20px;
-    }
-
-    .menu-footer li {
-        font-size: 7px;
-        text-align: left;
-    }
-
-    .menu-footer li a {
-        font-size: 10px;
-        width: 10px;
-        padding: 0;
-    }
-
-    .mapa-copyr {
-        margin-top: -5px;
-    }
-
-    .mapa-container {
-        text-align: center;
-    }
-
-    .mapa-container .mapa {
-        height: 50px;
-        padding-bottom: 10px;
-    }
-
-    .inicio-sesion-footer form {
-        width: 100%;
-        text-align: center;
-        font-size: 8px;
-        justify-content: center;
-        margin-left: 30px;
-        align-content: center;
-    }
-
-    .input-group {
-        gap: -2px;
-        align-content: center;
-    }
-
-    .input-group label {
-        text-align: center;
-    }
-
-    .input-group input[type="text"],
-    .input-group input[type="password"] {
-        width: 100%;
-        box-sizing: border-box;
-        max-width: 80%;
-        margin: 0;
-        padding: 6px 5px;
-        transition: transform 0.3s ease;
-        border: 1px solid #ccc;
-        outline: none;
-    }
-
-    .buttons-session-footer {
-        display: flex;
-        margin-top: 0;
-        margin-left: 20px;
-        gap: 3px;
-        align-content: center;
-        align-items: center;
-        justify-items: center;
-    }
-
-    .buttons-session-footer input[type="button"] {
-        font-size: 8px;
-        height: auto;
-        padding: 4px 10px;
-        text-align: center;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .inicio-sesion-footer .input-group label {
-        font-size: 8px;
-    }
-
-    .header .titulo h1 {
-        font-size: 25px;
-        padding-left: 15px;
-    }
-
-    .carousel-inner {
-        display: flex;
-        justify-content: space-around;
-    }
-
-    .carousel-item {
-        text-align: center;
-    }
-
-    .carousel-item img {
-        max-width: 100%;
-        height: auto;
-    }
-
-    .titulo-4 {
-        flex-direction: column;
-    }
-
-    .titulo-4 .texto-container h4 {
-        font-size: 1em;
-    }
-
-    .titulo-4 .texto-container p {
-        font-size: 10px;
-    }
-
-    .fondo h2 {
-        font-size: 1.5em;
-    }
-
-    .container-perfil-autor {
-        width: 90%; 
-        margin: 0 auto; 
-        margin-bottom: 10px;
-        display: flex; 
-        justify-content: center; 
-        align-items: center; 
-        flex-direction: column; 
-    }
-    
-    .elemento {
-        width: 80%; 
-        margin-bottom: 5px;
-        height: 200px;
-        display: flex;
-        flex-direction: column;
-    }
-    
-    .foto-perfil,
-    .foto-perfil-2,
-    .video-perfil-1 {
-        margin-bottom: 0;
-        padding-bottom: 0;
-        height: 100%;
-    }
-    
-    .foto-perfil img,
-    .foto-perfil-2 img,
-    .video-perfil-1 {
-        width: 100%;
-        height: 100%;
-        max-width: 100%;
-    }
-    
-    .texto-perfil,
-    .small-text p {
-        font-size: 10px;
-        padding: 10px;
-        flex-grow: 1;
-        width: 100%; 
-        max-width: 100%;
-        height: auto;
-        margin: 0;
-    }
-    
-    .video-1 {
-        width: 100%;
-    }
-    
-    .elemento img,
-    .elemento p {
-        margin: 0;
-    }
-
-    /* Influencias - Responsive */
-    .fondo {
-        display: block; 
-        max-width: 100%; 
-        margin: 0 auto; 
-    }
-
-    .container-grid-img-influencias {
-        display: flex; 
-        flex-direction: column;
-        text-align: column;
-        align-items: center;
-    }
-
-    .container-grid-img-influencias .texto-influencia p{
-        font-size: 12px;
-    }
-
-    .texto-influencia,
-    .imagen-influencia-1,
-    .imagen-influencia-2,
-    .imagen-influencia-3,
-    .imagen-influencia-4,
-    .texto-influencia-3,
-    .imagen-influencia-5,
-    .imagen-influencia-6,
-    .imagen-influencia-7 {
-        margin: 10px 0;
-        width: 50%;
-        height: 70%;
-        box-sizing: border-box; 
-    }
-
-    .influ {
-        max-width: 100%;
-        height: auto;
-    }
-}
 
 /* Header REFORMADO */
 
@@ -1237,4 +782,484 @@ h4 {
 .comentarios {
     height: 100px;
     width: 300px;
+}
+
+@media (min-width: 768px) and (max-width: 1375px) {
+    .titulo h1 {
+        font-size: 4em;
+        color: #F6F6F6;
+    }
+
+    .logo .logo-imagen {
+        width: 100%;
+        height: 150px;
+    }
+
+    .menu-header {
+        display: flex;
+    }
+}
+
+@media (max-width: 768px) {
+    header {
+        height: 30%;
+        width: 100%;
+    }
+
+    body {
+        height: 55%;
+        width: 100%;
+    }
+
+    footer {
+        height: 15%;
+        width: 100%;
+    }
+
+    .container-header {
+        grid-template-areas:
+            "logo"
+            "titulo"
+            "searchbar"
+            "area-menu-header";
+    }
+
+    .fondo h3 {
+        font-size: 10px;
+        letter-spacing: 5px;
+        color: #d3d3c3;
+    }
+
+    .responsive-title {
+        font-size: 15px;
+    }
+
+    /*.titulo {
+        max-height: 100px;
+        justify-content: center;
+    }*/
+
+    .logo {
+        max-height: 100px;
+    }
+
+    .logo .logo-imagen {
+        width: 100%;
+        height: 90px;
+    }
+
+    .logo {
+        margin-bottom: 0px;
+        padding: 0;
+    }
+
+    .container-header .searchbar {
+        display: none;
+        width: 100px;
+        height: 100%;
+    }
+
+    .menu-header {
+        display: inline-flex;
+        flex-wrap: wrap;
+        gap: 0;
+        font-size: 5px;
+        padding: 0;
+        margin: 0;
+    }
+
+    .menu-header li a {
+        gap: 0;
+        font-size: 4px;
+    }
+
+    .menu-footer li a {
+        font-size: 15px;
+        width: 40px;
+    }
+
+    .mapa-container p {
+        font-size: 7px;
+    }
+
+    .mapa-container .mapa {
+        height: 100px;
+    }
+
+    .inicio-sesion-footer form {
+        width: 100px;
+        font-size: 15px;
+    }
+
+    .inicio-sesion-footer form {
+        width: 100px;
+        font-size: 9px;
+    }
+
+    .logo .logo-imagen {
+        width: 100%;
+        height: 90px;
+        margin-top: 20px;
+    }
+
+    .menu-footer li a {
+        font-size: 10px;
+        width: 15px;
+    }
+
+    .mapa-container .mapa {
+        height: 70px;
+    }
+
+    .inicio-sesion-footer form {
+        width: 60px;
+        font-size: 8px;
+    }
+
+    .buttons-session-footer {
+        width: 70px;
+        font-size: 9px;
+    }
+
+    .inicio-sesion-footer .input-group label {
+        font-size: 8px;
+    }
+
+    .buttons-session-footer input[type="button"] {
+        width: 30px;
+        font-size: 7px;
+        gap: 4px;
+        padding: 0 0;
+    }
+
+    .contenedor-menu-footer {
+        gap: 2px;
+    }
+}
+
+@media (max-width: 391px) {
+    header {
+        height: 20%;
+        width: 100%;
+    }
+
+    body {
+        height: 45%;
+        width: 100%;
+        overflow-x: hidden;
+    }
+
+    footer {
+        height: 35%;
+        width: 100%;
+    }
+
+    .header {
+        margin-bottom: 0;
+        margin-top: 0;
+    }
+
+    .container-header {
+        grid-template-areas:
+            "logo"
+            "titulo"
+            "searchbar"
+            "area-menu-header";
+        max-height: 15em;
+        display: flex; 
+        flex-direction: column;
+        justify-content: space-between; 
+        align-items: center;
+        padding-bottom: 10px; 
+    }
+
+    .main-contenido-principal .fondo h3 {
+        font-size: 15px;
+    }
+
+    .cotainer-header .logo{
+        display: inline-flex;
+        flex-direction: row;
+    }
+    
+    .area-menu-header .menu-header li a {
+        font-size: 8px;
+        gap: 0;
+        margin-top: 0;
+    }
+
+    .area-menu-header .menu-header li {
+        padding: 0;
+        margin: 0;
+        background-color: #1C1C1C;
+    }
+
+    .logo .logo-imagen {
+        width: 100%;
+        height: 90%;
+        margin-top: 5px;
+    }
+
+    .header{
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .titulo {
+        flex: 1; 
+    }
+    
+    .header .titulo h1 {
+        font-size: 25px;
+        padding-left: 5px;
+    }
+
+    /* Footer - Responsive */
+    .contenedor-menu-footer-grande {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 20px;
+    }
+
+    .contenedor-derechos .footer-bottom-text {
+        font-size: 3px;
+    }
+
+    .footer-bottom-text {
+        text-align: center;
+        margin-top: 0;
+        margin: 0;
+        color: #F6F6F6;
+        font-family: "Merryweather";
+        text-decoration: none;
+        list-style-type: none;
+        padding: 1px;
+    }
+
+    .redes-sociales,
+    .mapa-copyr,
+    .log-inicio-foot {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 10em;
+        width: auto;
+    }
+
+    .menu-item .fab {
+        font-size: 12px;
+    }
+
+    .menu-footer {
+        height: 16em;
+        display: table-column;
+        padding-right: 10px;
+        margin-right: 20px;
+    }
+
+    .menu-footer li {
+        font-size: 7px;
+        text-align: left;
+    }
+
+    .menu-footer li a {
+        font-size: 10px;
+        width: 10px;
+        padding: 0;
+    }
+
+    .mapa-copyr {
+        margin-top: -5px;
+    }
+
+    .mapa-container {
+        text-align: center;
+    }
+
+    .mapa-container .mapa {
+        height: 50px;
+        padding-bottom: 10px;
+    }
+
+    .inicio-sesion-footer form {
+        width: 100%;
+        text-align: center;
+        font-size: 8px;
+        justify-content: center;
+        margin-left: 30px;
+        align-content: center;
+    }
+
+    .input-group {
+        gap: -2px;
+        align-content: center;
+    }
+
+    .input-group label {
+        text-align: center;
+    }
+
+    .input-group input[type="text"],
+    .input-group input[type="password"] {
+        width: 80%;
+        height: 16px;
+        box-sizing: border-box;
+        margin: 0;
+        padding: 6px 5px;
+        transition: transform 0.3s ease;
+        border: 1px solid #ccc;
+        outline: none;
+    }
+
+    .buttons-session-footer {
+        display: flex;
+        margin-top: 8px;
+        margin-left: 20px;
+        gap: 15px;
+        align-content: center;
+        align-items: center;
+        justify-items: center;
+    }
+
+    .buttons-session-footer input[type="button"] {
+        font-size: 8px;
+        height: auto;
+        padding: 4px 10px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .inicio-sesion-footer .input-group label {
+        font-size: 8px;
+    }
+
+    /* Main Index - Responsive */
+
+    .carousel-inner {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .carousel-item {
+        text-align: center;
+    }
+
+    .carousel-item img {
+        max-width: 70%;
+        height: auto;
+    }
+
+    .titulo-4 {
+        flex-direction: column;
+    }
+
+    .titulo-4 .texto-container h4 {
+        font-size: 1em;
+    }
+
+    .titulo-4 .texto-container p {
+        font-size: 10px;
+    }
+
+    /* Autor - Responsive */
+    
+    .fondo h2 {
+        font-size: 1.5em;
+    }
+
+    .container-perfil-autor {
+        width: 90%; 
+        margin: 0 auto; 
+        margin-bottom: 10px;
+        display: flex; 
+        justify-content: center; 
+        align-items: center; 
+        flex-direction: column; 
+    }
+    
+    .elemento {
+        width: 80%; 
+        margin-bottom: 5px;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .foto-perfil,
+    .foto-perfil-2,
+    .video-perfil-1 {
+        margin-bottom: 0;
+        padding-bottom: 0;
+        height: 100%;
+    }
+    
+    .foto-perfil img,
+    .foto-perfil-2 img,
+    .video-perfil-1 {
+        width: 100%;
+        height: 100%;
+        max-width: 100%;
+    }
+    
+    .texto-perfil,
+    .small-text p {
+        font-size: 10px;
+        padding: 10px;
+        flex-grow: 1;
+        width: 100%; 
+        max-width: 100%;
+        height: auto;
+        margin: 0;
+    }
+    
+    .video-1 {
+        width: 100%;
+    }
+    
+    .elemento img,
+    .elemento p {
+        margin: 0;
+    }
+
+    /* Influencias - Responsive */
+    .fondo {
+        display: block; 
+        max-width: 100%; 
+        margin: 0 auto; 
+    }
+
+    .container-grid-img-influencias {
+        display: flex; 
+        flex-direction: column;
+        text-align: column;
+        align-items: center;
+    }
+
+    .container-grid-img-influencias .texto-influencia p{
+        font-size: 12px;
+    }
+
+    .texto-influencia,
+    .imagen-influencia-1,
+    .imagen-influencia-2,
+    .imagen-influencia-3,
+    .imagen-influencia-4,
+    .texto-influencia-3,
+    .imagen-influencia-5,
+    .imagen-influencia-6,
+    .imagen-influencia-7 {
+        margin: 10px 0;
+        width: 100%;
+        height: 70%;
+        box-sizing: border-box; 
+    }
+
+    .influ {
+        max-width: 100%;
+        height: auto;
+    }
 }
