--- a/css/estilo.css
+++ b/css/estilo.css
@@ -937,7 +937,7 @@ h4 {
     }
 }
 
-@media (max-width: 391px) {
+@media (max-width: 490px) {
     header {
         height: 20%;
         width: 100%;
@@ -1169,6 +1169,7 @@ h4 {
     
     .fondo h2 {
         font-size: 1.5em;
+        color: #F6F6F6;
     }
 
     .container-perfil-autor {
@@ -1328,5 +1329,18 @@ h4 {
         max-width: 100%;
         height: auto;
         object-fit: scale-down;
+    }
+
+    /* Comentarios - Responsive */
+    .about-centrar label{
+        font-size: 12px;
+    }
+
+    .about-centrar input not:comentarios{
+        height: 60%;
+    }
+
+    .comentarios{
+        width: 60%;
     }
 }
