cambios en el h2

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -65,6 +65,13 @@ h4 {
     font-size: 20px;
 }
 
+.fondo h2 {
+    color: #ebebe6;
+    font-family: "Work Sans";
+    font-size: 3em;
+    text-align: center;
+    padding: 20px;
+}
 
 /* Header REFORMADO */
 
